--- a/wiki/redirect.yaml
+++ b/wiki/redirect.yaml
@@ -410,7 +410,6 @@
 "tag4":                        "Beatmap/TAG"
 "tap":                         "Play_style"
 "test_mode":                   "Client/Beatmap_editor/Test_mode"
-"time_signature":              "Beatmapping/Time_signature"
 "timing_section":              "Beatmapping/Timing_section"
 "touchpad":                    "Gameplay/Input_device/Graphics_tablet"
 "touchscreen":                 "Gameplay/Input_device/Graphics_tablet"
@@ -1836,3 +1835,8 @@
 "universal_offset":                 "Client/Options/Universal_offset"
 "osu!_program_files":               "Client/Program_files"
 "osu!_program_files/user_configuration_file": "Client/Program_files/User_configuration_file"
+
+# moved in #6995
+"time_signature":                   "Music_theory/Time_signature"
+"beatmapping/time_signature":       "Music_theory/Time_signature"
+"downbeat":                         "Music_theory/Downbeat"
