--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
         "remark-lint-osu-links": "github:cl8n/remark-lint-osu-links",
         "remark-lint-osu-wiki-links": "github:MegaApplePi/remark-lint-osu-wiki-links",
         "remark-preset-lint-markdown-style-guide": "5.1.2",
-        "vfile-reporter-position": "0.1.7"
+        "vfile-reporter-position": "github:TicClick/vfile-reporter-position#update-vfile-message-v3"
     }
 }
