--- a/wiki/redirect.yaml
+++ b/wiki/redirect.yaml
@@ -275,8 +275,6 @@
 "collaboration":               "Beatmap/Beatmap_collaborations"
 "combo":                       "Disambiguation/Combo"
 "combos":                      "Disambiguation/Combo"
-"combo_colour":                "Glossary/Combo_colour"
-"combo_color":                 "Glossary/Combo_colour"
 "combo_fire":                  "Gameplay/Combo_fire"
 "combofire":                   "Gameplay/Combo_fire"
 "glossary/combo_fire":         "Gameplay/Combo_fire"
@@ -314,7 +312,6 @@
 "ds_games":                    "iNiS_games"
 "eba":                         "iNiS_games"
 "elite_beat_agents":           "iNiS_games"
-"fc":                          "Full_combo"
 "geki":                        "Gameplay/Judgement/Geki"
 "elite_beat!":                 "Gameplay/Judgement/Geki"
 "激":                          "Gameplay/Judgement/Geki"
@@ -1840,3 +1837,9 @@
 "time_signature":                   "Music_theory/Time_signature"
 "beatmapping/time_signature":       "Music_theory/Time_signature"
 "downbeat":                         "Music_theory/Downbeat"
+
+# moved in #7154
+"fc":                               "Gameplay/Full_combo"
+"full_combo":                       "Gameplay/Full_combo"
+"combo_colour":                     "Beatmapping/Combo_colour"
+"combo_color":                      "Beatmapping/Combo_colour"
