--- a/meta/group-info/de.yaml
+++ b/meta/group-info/de.yaml
@@ -7,7 +7,7 @@ alumni:
     dev: osu!dev
     media: osu!media-Erstellung
     support: Support-Team
-    tournaments: Verwaltung von Wettbewerben
+    tournaments: Verwaltung von Turnieren
 gmt:
   all_mods: alle Moderatoren
   areas:
@@ -18,7 +18,7 @@ gmt:
     dev: osu!-Entwicklung
     player: Spieler-Support
     support: Technischer Support
-    tournaments: Verwaltung von Wettbewerben
+    tournaments: Verwaltung von Turnieren
     wiki: Wiki-Administration
     mapping: Moderation der Mapping-/Modding-Community
 nat:
