add missing redirect for `glossary/combo_colour`
this wasn't caught by ci since it still only checks links in changed files

--- a/wiki/redirect.yaml
+++ b/wiki/redirect.yaml
@@ -1843,3 +1843,5 @@
 "full_combo":                       "Gameplay/Full_combo"
 "combo_colour":                     "Beatmapping/Combo_colour"
 "combo_color":                      "Beatmapping/Combo_colour"
+"glossary/combo_colour":            "Beatmapping/Combo_colour"
+"glossary/combo_color":             "Beatmapping/Combo_colour"
