pin yamllint version and remove redundant install
Co-authored-by: TicClick <ya@ticclick.ch>

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -58,7 +58,7 @@ jobs:
 
       - name: setup and run yamllint on .yaml and .md files
         run: |
-          pip install yamllint
+          pip install -r scripts/requirements.txt
           python scripts/ci/run_yamllint.py --config .yamllint.yaml
 
       - name: find broken wikilinks
