distinguished gmt/dev and alumni/dev

--- a/meta/group-info/zh.yaml
+++ b/meta/group-info/zh.yaml
@@ -15,7 +15,7 @@ gmt:
     chat: 聊天管理员
     forum: 论坛管理员
     team: 官方团队
-    dev: osu! 开发团队
+    dev: osu! 贡献者
     player: 玩家支持团队
     support: 技术支持团队
     tournaments: 锦标赛管理员
