Add Belarusian and Ukrainian to group-info languages

--- a/meta/group-info/ja.yaml
+++ b/meta/group-info/ja.yaml
@@ -1,4 +1,5 @@
-separator: "、"
+outdated_translation: true # missing languages.be and languages.uk
+separator: 、
 alumni:
   roles:
     academy: osu!academy創設者
