--- a/meta/group-info/en.yaml
+++ b/meta/group-info/en.yaml
@@ -30,6 +30,7 @@ nat:
 languages:
   partial: some <language>
   ar: Arabic
+  be: Belarusian
   bg: Bulgarian
   bn: Bengali
   ca: Catalan
@@ -61,6 +62,7 @@ languages:
   te: Telugu
   th: Thai
   tr: Turkish
+  uk: Ukrainian
   ur: Urdu
   vi: Vietnamese
   yue: Cantonese
