--- a/meta/group-info/es.yaml
+++ b/meta/group-info/es.yaml
@@ -1,3 +1,4 @@
+outdated_translation: true # missing languages.be and languages.uk
 # need to update alumni.roles.tournaments and gmt.areas.tournaments
 separator: ", "
 alumni:
