--- a/meta/group-info/en.yaml
+++ b/meta/group-info/en.yaml
@@ -1,3 +1,4 @@
+# For help translating this file, see https://github.com/ppy/osu-wiki/blob/master/meta/group-info/TRANSLATING.md#group-info.
 separator: ", "
 alumni:
   roles:
