(Russian) add new languages to the group translation metafile

--- a/meta/group-info/ru.yaml
+++ b/meta/group-info/ru.yaml
@@ -32,6 +32,7 @@ nat:
 languages:
   partial: частично <language>
   ar: арабский
+  be: белорусский
   bg: болгарский
   bn: бенгальский
   ca: каталанский
@@ -63,6 +64,7 @@ languages:
   te: телугу
   th: тайский
   tr: турецкий
+  uk: украинский
   ur: урду
   vi: вьетнамский
   yue: кантонский диалект
