--- a/meta/group-info/ru.yaml
+++ b/meta/group-info/ru.yaml
@@ -1,5 +1,3 @@
-outdated_translation: true # missing languages.be and languages.uk
-# need to update alumni.roles.tournaments and gmt.areas.tournaments
 separator: ", "
 alumni:
   roles:
@@ -20,7 +18,7 @@ gmt:
     dev: разработка osu!
     player: поддержка игроков
     support: техподдержка
-    tournaments: турниры
+    tournaments: организация турниров
     wiki: администрирование вики
     mapping: модерация маппинг-сообщества
 nat:
