--- a/meta/group-info/de.yaml
+++ b/meta/group-info/de.yaml
@@ -1,6 +1,3 @@
-outdated_since: dca16aabefecc2b5ab512b49881308b8ac0077b8
-outdated_translation: true # missing languages.be and languages.uk
-
 separator: ", "
 alumni:
   roles:
@@ -34,6 +31,7 @@ languages:
   partial: etwas <language>
   ar: Arabisch
   bg: Bulgarisch
+  be: Belarussisch
   bn: Bengalisch
   ca: Katalanisch
   da: Dänisch
@@ -65,6 +63,7 @@ languages:
   th: Thailändisch
   tr: Türkisch
   ur: Urdu
+  uk: Ukrainisch
   vi: Vietnamesisch
   yue: Kantonesisch
   zh: Chinesisch
