--- a/wiki/redirect.yaml
+++ b/wiki/redirect.yaml
@@ -739,10 +739,10 @@
 "visual_content":              "Rules/Visual_Content_Considerations"
 
 "score":                       "Gameplay/Score"
-"score/osu!":                  "Gameplay/Score/osu!"
-"score/osu!taiko":             "Gameplay/Score/osu!taiko"
-"score/osu!catch":             "Gameplay/Score/osu!catch"
-"score/osu!mania":             "Gameplay/Score/osu!mania"
+"score/osu!":                  "Gameplay/Score/ScoreV1/osu!"
+"score/osu!taiko":             "Gameplay/Score/ScoreV1/osu!taiko"
+"score/osu!catch":             "Gameplay/Score/ScoreV1/osu!catch"
+"score/osu!mania":             "Gameplay/Score/ScoreV1/osu!mania"
 "scorev1":                     "Gameplay/Score/ScoreV1"
 "score/scorev1":               "Gameplay/Score/ScoreV1"
 "scorev2":                     "Gameplay/Score#scorev2"
@@ -751,6 +751,11 @@
 "score/ranked_score":          "Gameplay/Score/Ranked_score"
 "ranked_score":                "Gameplay/Score/Ranked_score"
 "level":                       "Gameplay/Score/Total_score#level"
+
+"gameplay/score/osu!"          "Gameplay/Score/ScoreV1/osu!"
+"gameplay/score/osu!taiko"     "Gameplay/Score/ScoreV1/osu!taiko"
+"gameplay/score/osu!catch"     "Gameplay/Score/ScoreV1/osu!catch"
+"gameplay/score/osu!mania"     "Gameplay/Score/ScoreV1/osu!mania"
 
 "hotkeys": "Client/Keyboard_shortcuts"
 "keyboard_shortcuts": "Client/Keyboard_shortcuts"
