Move existing ScoreV1 redirects to new section

--- a/wiki/redirect.yaml
+++ b/wiki/redirect.yaml
@@ -743,8 +743,8 @@
 "score/osu!taiko":             "Gameplay/Score/ScoreV1/osu!taiko"
 "score/osu!catch":             "Gameplay/Score/ScoreV1/osu!catch"
 "score/osu!mania":             "Gameplay/Score/ScoreV1/osu!mania"
-"scorev1":                     "Gameplay/Score/ScoreV1"
-"score/scorev1":               "Gameplay/Score/ScoreV1"
+"scorev1":                     "Gameplay/Score#scoreV1"
+"score/scorev1":               "Gameplay/Score#scoreV1"
 "scorev2":                     "Gameplay/Score#scorev2"
 "score/total_score":           "Gameplay/Score/Total_score"
 "total_score":                 "Gameplay/Score/Total_score"
