Remove `Gameplay/Score/ScoreV1`
It duplicates content from the new `Gameplay/Score/ScoreV1`
ruleset-specific subpages.

--- a/wiki/redirect.yaml
+++ b/wiki/redirect.yaml
@@ -752,6 +752,7 @@
 "ranked_score":                "Gameplay/Score/Ranked_score"
 "level":                       "Gameplay/Score/Total_score#level"
 
+"gameplay/score/scorev1":      "Gameplay/Score#scoreV1"
 "gameplay/score/osu!"          "Gameplay/Score/ScoreV1/osu!"
 "gameplay/score/osu!taiko"     "Gameplay/Score/ScoreV1/osu!taiko"
 "gameplay/score/osu!catch"     "Gameplay/Score/ScoreV1/osu!catch"
