--- a/wiki/redirect.yaml
+++ b/wiki/redirect.yaml
@@ -753,10 +753,10 @@
 "level":                       "Gameplay/Score/Total_score#level"
 
 "gameplay/score/scorev1":      "Gameplay/Score#scoreV1"
-"gameplay/score/osu!"          "Gameplay/Score/ScoreV1/osu!"
-"gameplay/score/osu!taiko"     "Gameplay/Score/ScoreV1/osu!taiko"
-"gameplay/score/osu!catch"     "Gameplay/Score/ScoreV1/osu!catch"
-"gameplay/score/osu!mania"     "Gameplay/Score/ScoreV1/osu!mania"
+"gameplay/score/osu!":         "Gameplay/Score/ScoreV1/osu!"
+"gameplay/score/osu!taiko":    "Gameplay/Score/ScoreV1/osu!taiko"
+"gameplay/score/osu!catch":    "Gameplay/Score/ScoreV1/osu!catch"
+"gameplay/score/osu!mania":    "Gameplay/Score/ScoreV1/osu!mania"
 
 "hotkeys": "Client/Keyboard_shortcuts"
 "keyboard_shortcuts": "Client/Keyboard_shortcuts"
