--- a/meta/group-info/fr.yaml
+++ b/meta/group-info/fr.yaml
@@ -1,6 +1,3 @@
-outdated_since: dca16aabefecc2b5ab512b49881308b8ac0077b8
-outdated_translation: true # missing languages.be and languages.uk
-
 separator: ", "
 alumni:
   roles:
@@ -33,6 +30,7 @@ nat:
 languages:
   partial: un peu de <language>
   ar: Arabe
+  be: Biélorusse
   bg: Bulgare
   bn: Bengali
   ca: Catalan
@@ -64,6 +62,7 @@ languages:
   te: Telugu
   th: Thaïlandais
   tr: Turc
+  uk: Ukrainien
   ur: Urdu
   vi: Vietnamien
   yue: Cantonais
