Use special `partial` value if language is prefixed by vowel in FR

--- a/meta/group-info/fr.yaml
+++ b/meta/group-info/fr.yaml
@@ -29,4 +29,5 @@ nat:
     structural: structure
 languages:
   partial: un peu de <language>
+  partial_vowel_prefix: un peu d'<language> # This key is specific to FR
   fil: philippin
